--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-typelib-example",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^3.5.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/imt-jaime/ts-typelib-example.git"
   }
 }
